# AoC2022

./: .gitignore  README  README.md  aoc-c-srcs.mk  configure.ac
include/: day0.h  day1.h  day10.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  utils.h
src/: Makefile.am  aoc.c  day0.c  day1.c  day10.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  utils.c
src/input/: day10_p0_1.txt  day1_p1_1.txt  day4_p0_1.txt  day6_p0_1.txt  day8_p0_1.txt  day9_p0_0.txt  day9_p0_2.txt
